# prompt-api-and-meilisearch-rag-conf-jira

./: .gitignore  AGENTS.md  LICENSE  copy-to-www.sh  index.html  reference-url.txt  run-adapter.sh  styles.css
adapter/: .gitignore  Cargo.toml  LICENSE
adapter/src/: main.rs
js/: api.js  app.js  config.js  ui.js
